<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>top.dlzio</groupId>
        <artifactId>dlz.parent</artifactId>
        <version>6.6.3.4</version>
    </parent>
    <artifactId>dlz-kit</artifactId>
    <name>dlz-kit</name>
    <version>6.6.5.1</version>
    <packaging>jar</packaging>
    <description>像JavaScript一样在Java中“丝滑”操作JSON</description>
    <url>https://github.com/dingkui/dlz-kit.git</url>
    <scm>
        <url>https://github.com/dingkui/dlz-kit</url>
        <connection>scm:git:https://github.com/dingkui/dlz-kit.git</connection>
        <developerConnection>scm:git:https://github.com/dingkui/dlz-kit.git</developerConnection>
    </scm>
    <properties>
        <jackson.version>2.17.3</jackson.version>

        <slf4j.version>1.7.32</slf4j.version>
        <lombok.version>1.18.30</lombok.version>

        <junit.version>4.13.2</junit.version>
        <jupiter.version>5.8.1</jupiter.version>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <!-- jackson -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <!-- logs -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
